[package]
name = "tracey-editor"
version = "0.1.0"
description = "Scene editor for Tracey ray tracer"
authors = ["Danny van Swieten"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"

# For shared memory viewport
shared_memory = "0.12"

# For FFI
libc = "0.2"

# For project system
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# For native window rendering
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
metal = "0.27"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.19", features = ["xlib"] }
wayland-client = "0.31"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
